[gd_scene load_steps=2 format=2]

[ext_resource path="res://ServerListScreen.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 5.0
script = ExtResource( 1 )

[node name="Join" type="Button" parent="."]
anchor_left = 0.276
anchor_right = 0.386
margin_left = 0.539978
margin_top = 376.0
margin_right = 0.190002
margin_bottom = 418.251
text = "Join"

[node name="Refresh" type="Button" parent="."]
anchor_left = 0.147
anchor_top = 0.02
anchor_right = 0.257
anchor_bottom = 0.021
margin_left = -0.494995
margin_top = 363.0
margin_right = 0.154999
margin_bottom = 404.651
rect_min_size = Vector2( 120, 0 )
text = "Refresh"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Grid" type="ItemList" parent="."]
anchor_left = 0.01
anchor_top = 0.025
anchor_right = 0.65
anchor_bottom = 0.687
margin_left = 0.15
margin_top = 3.0
margin_right = -90.2501
margin_bottom = -57.2
custom_constants/vseparation = 13
custom_constants/line_separation = 60
auto_height = true
same_column_width = true

[node name="Rooms" type="Label" parent="."]
margin_left = 14.0
margin_right = 72.0
margin_bottom = 14.0
text = "Rooms:"

[node name="RefreshTimer" type="Timer" parent="."]
autostart = true

[connection signal="button_down" from="Join" to="." method="_on_Join_button_down"]
[connection signal="button_down" from="Refresh" to="." method="_on_Refresh_button_down"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="item_selected" from="Grid" to="." method="_on_Grid_item_selected"]
[connection signal="timeout" from="RefreshTimer" to="." method="_on_RefreshTimer_timeout"]
